--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,71 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RecipeActivity"
-    >
+    tools:layout_editor_absoluteX="-8dp"
+    tools:layout_editor_absoluteY="14dp">
 
     <!-- Menu Icon -->
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/menuicon"
-        app:srcCompat="@drawable/menu_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="60dp"
+        android:contentDescription="@string/menuicon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/menu_icon" />
 
     <!-- "Recipe" Title -->
+
+    <!-- "Select Ingredients" Subtitle -->
+
+    <!-- Description Text -->
+
+    <!-- FRUIT BUTTON -->
+
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/recipe"
-        android:textSize="16sp"
-        android:textColor="@color/black"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="5dp"
         android:fontFamily="@font/poppins_medium"
-        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        android:text="@string/recipe"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView8"
         app:layout_constraintStart_toEndOf="@+id/imageView8"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <!-- "Select Ingredients" Subtitle -->
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/select_ingredients"
-        android:textSize="15sp"
-        android:textColor="@color/black"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/poppins_bold"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
-        android:layout_marginTop="24dp"
+        android:text="@string/select_ingredients"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
-    <!-- Description Text -->
     <TextView
         android:id="@+id/textView23"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/not_sure_what_meal_fits_your_diet_or_diabetes_needs_let_s_create_a_recipe_based_on_what_s_inside_your_fridge"
-        android:textSize="12sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/poppins_regular"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        android:fontFamily="@font/poppins_regular"
+        android:text="@string/not_sure_what_meal_fits_your_diet_or_diabetes_needs_let_s_create_a_recipe_based_on_what_s_inside_your_fridge"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
-    <!-- FRUIT BUTTON -->
     <include
         android:id="@+id/fruit_button"
         layout="@layout/custom_button"
@@ -74,9 +81,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView23"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
     <!-- VEGETABLE BUTTON -->
     <include
@@ -84,12 +91,12 @@
         layout="@layout/custom_button"
         android:layout_width="0dp"
         android:layout_height="59dp"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/fruit_button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/fruit_button" />
 
     <!-- MEAT BUTTON -->
     <include
@@ -97,22 +104,22 @@
         layout="@layout/custom_button"
         android:layout_width="0dp"
         android:layout_height="59dp"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/vegetable_button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/vegetable_button" />
 
     <!-- Navigation Bar Container - Overlaid on content -->
     <FrameLayout
         android:id="@+id/navigationBarContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:elevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:elevation="8dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <include
             layout="@layout/navigation_bar"
