--- a/app/src/main/res/layout/activity_recipe_choose_vegetable.xml
+++ b/app/src/main/res/layout/activity_recipe_choose_vegetable.xml
@@ -12,25 +12,87 @@
         android:id="@+id/back_button_recipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/back_button_vegetable"
-        app:srcCompat="@drawable/recipe_back_btn"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/back_button_vegetable"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/recipe_back_btn" />
 
     <!-- "Vegetable" Title -->
     <TextView
         android:id="@+id/vegetable_title_head"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vegetables"
-        android:textSize="16sp"
-        android:textColor="@color/black"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/poppins_medium"
-        app:layout_constraintTop_toTopOf="@+id/back_button_recipe"
+        android:text="@string/vegetables"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/back_button_recipe"
         app:layout_constraintStart_toEndOf="@+id/back_button_recipe"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toTopOf="@+id/back_button_recipe" />
+
+    <!-- Select Vegetables Text -->
+    <TextView
+        android:id="@+id/select_vegetables_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/select_vegetables"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/back_button_recipe" />
+
+    <!-- Help Text -->
+    <TextView
+        android:id="@+id/vegetable_help_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/poppins_regular"
+        android:text="@string/tap_on_vegetables_to_select_them_for_your_recipe"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/select_vegetables_text" />
+
+    <!-- Vegetables RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vegetables_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/confirm_vegetables_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/vegetable_help_text"
+        tools:listitem="@layout/item_vegetable" />
+
+    <!-- Confirm Button -->
+    <Button
+        android:id="@+id/confirm_vegetables_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/rounded_button_bg"
+        android:fontFamily="@font/poppins_medium"
+        android:text="@string/confirm_selection"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
