--- a/app/src/main/res/layout/activity_logs.xml
+++ b/app/src/main/res/layout/activity_logs.xml
@@ -5,21 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LogsActivity">
 
     <!-- Bar Chart View -->
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/glucoseBarChart"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"
-        android:background="#FFFFFF" />
 
     <!-- Navigation Bar -->
+
     <include
         android:id="@+id/navigation_bar"
         layout="@layout/navigation_bar"
@@ -41,7 +33,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
     <TextView
-        android:id="@+id/textView20"
+        android:id="@+id/current_day_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -65,7 +57,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textSize="7sp"
         app:layout_constraintEnd_toStartOf="@+id/history_button"
-        app:layout_constraintStart_toEndOf="@+id/textView20"
+        app:layout_constraintStart_toEndOf="@+id/current_day_text"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <Button
@@ -98,20 +90,78 @@
         app:layout_constraintTop_toTopOf="@+id/logged_today"
         app:layout_constraintVertical_bias="0.85" />
 
+    <!-- LinearLayout for Previous Week, Week Range, Next Week BELOW BarChart -->
+
     <Button
         android:id="@+id/log_button"
         android:layout_width="370dp"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="468dp"
         android:layout_marginEnd="21dp"
         android:backgroundTint="#0468FF"
         android:fontFamily="@font/poppins_medium"
         android:text="Log Glucose Level Today"
         app:icon="@drawable/ic_plus"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/week_navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/glucoseBarChart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" >
+
+        <!-- Previous Week Button -->
+        <ImageButton
+            android:id="@+id/prev_week_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Previous week"
+            android:src="@drawable/ic_chevron_left" />
+
+        <!-- Week Range Text -->
+        <TextView
+            android:id="@+id/week_range_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="This Week"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <!-- Next Week Button -->
+        <ImageButton
+            android:id="@+id/next_week_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Next week"
+            android:src="@drawable/ic_chevron_right" />
+    </LinearLayout>
+
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/glucoseBarChart"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_margin="16dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/log_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.884" />
 
     <ImageView
         android:id="@+id/imageView9"
@@ -150,7 +200,7 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/textView23"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+        app:layout_constraintTop_toBottomOf="@+id/current_day_text"/>
 
     <TextView
         android:id="@+id/textView26"
