--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,27 +34,28 @@
 
     <ImageView
         android:id="@+id/profilePicture"
-        android:src="@drawable/profile_1"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/profile_pic"
         app:civ_border_color="@android:color/white"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileTitle" />
+
 
     <ImageView
         android:id="@+id/ic_plus"
         android:layout_width="45dp"
         android:layout_height="71dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="-20dp"
         android:contentDescription="camera_icon"
-        android:src="@drawable/plus"
+        android:src="@drawable/change_pic"
         app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
-        app:layout_constraintEnd_toEndOf="@+id/profilePicture"
-        app:tint="@android:color/black" />
+        app:layout_constraintEnd_toEndOf="@+id/profilePicture" />
 
     <TextView
         android:id="@+id/nameLabel"
