--- a/app/src/main/res/layout/activity_recipe_result.xml
+++ b/app/src/main/res/layout/activity_recipe_result.xml
@@ -6,39 +6,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".RecipeResultActivity">>
+    tools:context=".RecipeResultActivity">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipe_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="12dp"
-            android:clipToPadding="false"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            android:scrollbars="vertical" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipe_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="12dp"
+        android:clipToPadding="false"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
-        <!-- Optional: Back button -->
-        <ImageView
-            android:id="@+id/back_button_recipe_result"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_margin="16dp"
-            android:padding="6dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/back"
-            android:contentDescription="Back"
-            app:layout_anchorGravity="top|start" />
+    <!-- Optional: Back button -->
+    <ImageView
+        android:id="@+id/back_button_recipe_result"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_margin="16dp"
+        android:padding="6dp"
+        android:layout_gravity="top|start"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/back"
+        android:contentDescription="Back" />
 
-
-        <!-- Navigation Bar Container -->
+    <!-- Navigation Bar Container -->
     <FrameLayout
         android:id="@+id/navigationBarContainer"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_gravity="bottom"
+        android:elevation="8dp">
 
         <include
             layout="@layout/navigation_bar"
@@ -46,4 +43,4 @@
             android:layout_height="wrap_content" />
     </FrameLayout>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
